...
        let completion = { [weak self] in
            guard let self else { return }
            correctAnswers = 0
            currentQuestionNumber = 1
            questionFactory.requestNextQuestion()
        }
        viewController?.showAlert(model: AlertModel(id: "Result alert",
                                                    title: result.title,
                                                    message: result.text,
                                                    buttonText: result.buttonText,
                                                    completion: completion))
    }
    
...
